--- a/src/app/annotate-v2/annotate-v2.component.less
+++ b/src/app/annotate-v2/annotate-v2.component.less
@@ -24,6 +24,28 @@
   .tab-group .tab-check-box {
     margin: 5px;
   }
+  .spectrogram {
+    position: relative;
+    padding-left: 150px;
+    padding-bottom: 30px;
+  }
+  .spectrogram-img{
+    width:650px;
+    height:500px;
+  }
+  .waves {
+
+    #waves { width: 100%;
+      border: 1px solid #ddd !important;
+      box-sizing: border-box;
+      position: relative;
+    }
+
+  }
+  .wavetimeline {
+    width: 100%;
+  }
+
 // .wavesurfer-region {
 //     border: 1px solid #ddd !important;
 //     box-sizing: border-box;
@@ -31,27 +53,27 @@
   
   
 // Width variables (appears count calculates by raw css)
-@width0: 2000px; // Appears 2 times
+// @width0: 1000px; // Appears 2 times
 
 
-.wavesurfer-region {
-	border: 1px solid #dddddd !important;
-	box-sizing: border-box;
-}
-#waveform {
-	width: @width0;
-}
-#spectrogram {
-	margin: 10px auto;
-	position: relative;
-	width:@width0;
-	canvas {
-		left: 0;
-	}
-}
-//   #waveform{
-//     width: 2000px;
-//     }
+// .wavesurfer-region {
+// 	border: 1px solid #ddd !important;
+// 	box-sizing: border-box;
+// }
+// #waveform {
+// 	width: @width0;
+// }
+// #spectrogram {
+// 	margin: 10px auto;
+// 	position: relative;
+// 	width:@width0;
+// 	canvas {
+// 		left: 0;
+// 	}
+// }
+  // #waveform{
+  //   width: 2000px;
+  //   }
   
 //   #spectrogram{
 //     width:2000px;
