--- a/src/app/annotate-v2/annotate-v2.component.html
+++ b/src/app/annotate-v2/annotate-v2.component.html
@@ -4,6 +4,10 @@
     <div id = "waves"></div>
 </div>
 <div id = "wavetimeline" class="wavetimeline"></div>
+<div class ="spectrogram" fxLayout="column" fxLayoutAlign=start center>
+    <!-- <h5 style="text-align: center;" class="tab-sub-title" fxFlex.xs="100">Spectrogram</h5> -->
+<img [src]="spectrogram" class="spectrogram-img"> 
+</div>
     <div *ngIf="annotateLoader" fxLayout="column" fxLayoutAlign="center center" fxFlexFill>
         <mat-progress-spinner [diameter]="50" mode="indeterminate"></mat-progress-spinner>
     </div>
@@ -36,10 +40,7 @@
                     <div fxFlex></div>
                     <div *ngIf="annotateFormGroup.valid && (playedOnce || timeOut)" class="button" (click)="nextRecording()">NEXT</div>
                 </div>
-                <div class ="spectrogram" fxLayout="column" fxLayoutAlign=start center>
-                        <h5 style="text-align: center;" class="tab-sub-title" fxFlex.xs="100">Spectrogram</h5>
-                    <img [src]="spectrogram" class="spectrogram-img"> 
-                </div>
+
 
                 <div class="forms" fxLayout="row wrap" fxLayoutAlign="start start">
                     <div class="tab-group" fxLayout="column" fxLayoutAlign="start start" fxFlex="100">
