--- a/src/app/annotate-v2/annotate-v2.component.less
+++ b/src/app/annotate-v2/annotate-v2.component.less
@@ -24,25 +24,30 @@
   .tab-group .tab-check-box {
     margin: 5px;
   }
-  .spectrogram {
-    position: relative;
-    padding-left: 150px;
-    padding-bottom: 30px;
-  }
+  // .spectrogram {
+  //   position: relative;
+  //   padding-left: 150px;
+  //   padding-bottom: 30px;
+  // }
   .spectrogram-img{
-    width:650px;
-    height:500px;
+    width:100%;
+    position: relative;
+    height:300px;
   }
   .waves {
 
-    #waves { width: 100%;
+    #waves { 
+      padding-left: 5px;
+      width: 100%;
+      // height: 20%;
       border: 1px solid #ddd !important;
       box-sizing: border-box;
-      position: relative;
+      // position: relative;
     }
 
   }
   .wavetimeline {
+    padding-left: 5px;
     width: 100%;
   }
 
