--- a/src/app/annotate-v2/annotate-v2.component.html
+++ b/src/app/annotate-v2/annotate-v2.component.html
@@ -12,8 +12,8 @@
             <mat-progress-spinner [diameter]="50" mode="indeterminate"></mat-progress-spinner>
         </div>
         <div *ngIf="!annotateLoader && isEnoughPermissions" fxLayout="column" >
-            <h4 *ngIf="annotatorInfo.completed == 0">Thank you {{annotatorInfo.n.split(' ')[0]}} for being a part of Coswara!</h4>
-            <h4 *ngIf="annotatorInfo.completed > 0">Hurray!! You have annotated {{annotatorInfo.completed_v2}} user(s)</h4>
+            <h4 *ngIf="annotatorInfo.completed_v2 == 0">Thank you {{annotatorInfo.n.split(' ')[0]}} for being a part of Coswara!</h4>
+            <h4 *ngIf="annotatorInfo.completed_v2 > 0">Hurray!! You have annotated {{annotatorInfo.completed_v2}} user(s)</h4>
             <div *ngIf="annotatedStageLoader" fxFlex="row" fxLayoutAlign="start center" fxFlexFill>
                 <mat-progress-spinner [diameter]="30" mode="indeterminate"></mat-progress-spinner>
             </div>
