--- a/src/app/annotate-v2/annotate-v2.component.less
+++ b/src/app/annotate-v2/annotate-v2.component.less
@@ -42,7 +42,7 @@
       // height: 20%;
       border: 1px solid #ddd !important;
       box-sizing: border-box;
-      // position: relative;
+      position: relative;
     }
 
   }
