--- a/src/app/annotate-v2-test/annotate-v2-test.component.html
+++ b/src/app/annotate-v2-test/annotate-v2-test.component.html
@@ -14,7 +14,7 @@
             <mat-progress-spinner [diameter]="50" mode="indeterminate"></mat-progress-spinner>
         </div>
         <div *ngIf="!annotateLoader && isEnoughPermissions" fxLayout="column" >
-            <h4 *ngIf="annotatorInfo.completed_test == 0">Thank you {{annotatorInfo.n.split(' ')[0]}} for being a part of Coswara! Welcome to the Annotation Test tool</h4>
+            <h4 *ngIf="annotatorInfo.completed_test == 0">Thank you {{annotatorInfo.n.split(' ')[0]}} for being a part of Coswara! Welcome to Annotation Test tool</h4>
             <h4 *ngIf="annotatorInfo.completed_test > 0">Hurray!! You have annotated {{annotatorInfo.completed_test}} user(s)</h4>
             <div *ngIf="annotatedStageLoader" fxFlex="row" fxLayoutAlign="start center" fxFlexFill>
                 <mat-progress-spinner [diameter]="30" mode="indeterminate"></mat-progress-spinner>
