--- a/src/app/annotate-v2/annotate-v2.component.html
+++ b/src/app/annotate-v2/annotate-v2.component.html
@@ -1,17 +1,21 @@
 
 <div class="component-container">
+    <div *ngIf=!testDone>
+        <h4 class="sub-title">Please finish the test phase of Annotation first at the link below before proceeding. Thank You!</h4>
+        <h4 class="sub-title" fxLayoutAlign="center"> <a href="https://coswara.iisc.ac.in/annotate_v2_test"> Annotation Test Phase</a></h4> 
+    </div>
     <div class="waves">
         <div id = "waves"></div>
     </div>
     <div id = "wavetimeline" class="wavetimeline"></div>
-    <div class ="spectrogram" fxLayout="column" fxLayoutAlign=start center>
+    <div *ngIf="testDone "class ="spectrogram" fxLayout="column" fxLayoutAlign=start center>
         <!-- <h5 style="text-align: center;" class="tab-sub-title" fxFlex.xs="100">Spectrogram</h5> -->
-    <img [src]="spectrogram" class="spectrogram-img"> 
+    <img [src]="spectrogram" class="spectrogram-img" (load)="imgLoaded()"> 
     </div>
-        <div *ngIf="annotateLoader" fxLayout="column" fxLayoutAlign="center center" fxFlexFill>
+        <div *ngIf="annotateLoader && testDone" fxLayout="column" fxLayoutAlign="center center" fxFlexFill>
             <mat-progress-spinner [diameter]="50" mode="indeterminate"></mat-progress-spinner>
         </div>
-        <div *ngIf="!annotateLoader && isEnoughPermissions" fxLayout="column" >
+        <div *ngIf="!annotateLoader && isEnoughPermissions && testDone" fxLayout="column" >
             <h4 *ngIf="annotatorInfo.completed_v2 == 0">Thank you {{annotatorInfo.n.split(' ')[0]}} for being a part of Coswara!</h4>
             <h4 *ngIf="annotatorInfo.completed_v2 > 0">Hurray!! You have annotated {{annotatorInfo.completed_v2}} user(s)</h4>
             <div *ngIf="annotatedStageLoader" fxFlex="row" fxLayoutAlign="start center" fxFlexFill>
@@ -30,7 +34,7 @@
                     </div>
                 </div>
                 <div *ngIf="recordingAudioState >= 0" class="content" fxLayout="column" fxLayoutAlign="start start">
-                    <div class="button-container" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutAlign.xs="start start">
+                    <div *ngIf="enablePlayButton" class="button-container" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutAlign.xs="start start">
                         <div *ngIf="recordingAudioState == 0 || recordingAudioState == 1" class="button" (click)="recordingAudioState=2; startPlaying();">PLAY AUDIO</div>
                         <div *ngIf="recordingAudioState == 2" class="button button-dark" (click)="recordingAudioState=0; stopPlaying();">STOP PLAYING</div>
                         <div *ngIf="recordingAudioState == 2" class="button button-dark" (click)="recordingAudioState=0; clearRegions();">CLEAR REGIONS</div>
@@ -38,7 +42,7 @@
                     <div *ngIf="recordingAudioState >= 0" class="button-container" fxLayout="row">
                         <div *ngIf="recordStages.indexOf(this.currentStage) > 0" class="button" (click)="previousRecording()">PREVIOUS</div>
                         <div fxFlex></div>
-                        <div *ngIf="annotateFormGroup.valid && (playedOnce || timeOut)" class="button" (click)="nextRecording()">NEXT</div>
+                        <!-- <div *ngIf="annotateFormGroup.valid && (playedOnce || timeOut)" class="button" (click)="nextRecording()">NEXT</div> -->
                     </div>
     
     
@@ -106,6 +110,9 @@
                                 <textarea [formControl]="formControls.extraComments" matInput rows="3"></textarea>
                             </mat-form-field>
                         </div>
+                    </div>
+                    <div *ngIf="recordingAudioState >= 0" class="button-container" fxLayout="row">
+                    <div *ngIf="annotateFormGroup.valid && (playedOnce || timeOut)" class="button" (click)="nextRecording()">NEXT</div>
                     </div>
                 </div>
             </div>
