--- a/projects/collect/src/app/thanks/thanks.component.html
+++ b/projects/collect/src/app/thanks/thanks.component.html
@@ -24,9 +24,12 @@
         <div class="iisc-logo">
             <a href="https://www.iisc.ac.in/" target="_blank"><img src="../../assets/logo/iisc.jpg" height="75px" width="auto" alt="iisc"/></a>
         </div>
-        <div class="cogknit-logo">
-            <a href="https://www.cogknit.com/" target="_blank"><img src="../../assets/logo/cogknit.png" height="35px" width="auto" alt="cogknit"/></a>
+        <div class="hinduja-logo">
+            <a href="https://www.hindujahospital.com/" target="_blank"><img src="../../assets/logo/hinduja.jpg" height="75px" width="auto" alt="hinduja"/></a>
         </div>
+        <!-- <div class="cogknit-logo">
+            <a href="https://www.cogknit.com/" target="_blank"><img src="../../assets/logo/cogknit.png" height="35px" width="auto" alt="cogknit"/></a>
+        </div> -->
     </div>
     <div class="feedback" fxLayout="column" fxLayoutAlign="start start">
         <h4>{{'thanks.let_us_know_comments' | translate}}</h4>
