Edited Thank you page

--- a/projects/collect/src/app/thanks/thanks.component.html
+++ b/projects/collect/src/app/thanks/thanks.component.html
@@ -25,7 +25,7 @@
             <a href="https://www.iisc.ac.in/" target="_blank"><img src="../../assets/logo/iisc.jpg" height="75px" width="auto" alt="iisc"/></a>
         </div>
         <div class="hinduja-logo">
-            <a href="https://www.hindujahospital.com/" target="_blank"><img src="../../assets/logo/hinduja.jpg" height="75px" width="auto" alt="hinduja"/></a>
+            <a href="https://www.hindujahospital.com/" target="_blank"><img src="../../assets/logo/hinduja.png" height="75px" width="auto" alt="hinduja"/></a>
         </div>
         <!-- <div class="cogknit-logo">
             <a href="https://www.cogknit.com/" target="_blank"><img src="../../assets/logo/cogknit.png" height="35px" width="auto" alt="cogknit"/></a>
