Edited thank you page

--- a/projects/collect/src/app/thanks/thanks.component.html
+++ b/projects/collect/src/app/thanks/thanks.component.html
@@ -27,9 +27,9 @@
         <div class="hinduja-logo">
             <a href="https://www.hindujahospital.com/" target="_blank"><img src="../../assets/logo/hinduja.png" height="75px" width="auto" alt="hinduja"/></a>
         </div>
-        <!-- <div class="cogknit-logo">
-            <a href="https://www.cogknit.com/" target="_blank"><img src="../../assets/logo/cogknit.png" height="35px" width="auto" alt="cogknit"/></a>
-        </div> -->
+        <div class="msrmc-logo">
+            <a href="https://msrmc.ac.in/" target="_blank"><img src="../../assets/logo/msrmc.png" height="75px" width="auto" alt="msrmc"/></a>
+        </div>
     </div>
     <div class="feedback" fxLayout="column" fxLayoutAlign="start start">
         <h4>{{'thanks.let_us_know_comments' | translate}}</h4>
