--- a/projects/collect/src/app/thanks/thanks.component.html
+++ b/projects/collect/src/app/thanks/thanks.component.html
@@ -8,6 +8,26 @@
         <div class="box">{{userData.uid}}</div>
         <div *ngIf="!isOkay" class="color-red small-text">There is some issue with your recordings</div>
     </div>
+    <div class="score" fxLayout="row" fxLayoutAlign="start center">
+        <div *ngIf="scoreData && !scoreData.score" class="score-loader" fxLayout="row" fxLayoutAlign="center center">
+            <mat-progress-spinner [diameter]="60" mode="indeterminate"></mat-progress-spinner>
+            <div class="score-loader-content">
+                <h5 class="main">Computing your score</h5>
+                <div class="small-text">{{scoreData.m}}</div>
+            </div>
+        </div>
+        <div *ngIf="scoreData.score" class="score-view" fxLayout="column" fxLayout.gt-xs="row" fxLayoutAlign="center center">
+            <div class="score-value" fxLayout="row" fxLayoutAlign="center center">
+                <div class="score-value-box">{{scoreData.score}}</div>
+            </div>
+            <div class="score-desc" fxFlex>
+                <h5>You have a {{scoreData.score * 100}}% chance of having COVID '19.</h5>
+                <div class="score-legend">
+                    Add legend and other info here
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="thank-you-footer">
         <div *ngIf="!signOutLoader" class="button" (click)="startSession()">{{'thanks.button.start_new_session' | translate}}</div>
         <mat-progress-spinner *ngIf="signOutLoader" [diameter]="30" mode="indeterminate"></mat-progress-spinner>
