Added test awaiting option and srf_id field

--- a/projects/collect/src/app/details/details.component.html
+++ b/projects/collect/src/app/details/details.component.html
@@ -196,10 +196,10 @@
                 <h5 class="tab-sub-title" fxFlex="100">{{ 'forms.label.taken_test' | translate}} <span>*</span></h5>
                 <div class="covid-test-status" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="10px" fxFlex="100">
                     <mat-radio-group class="radio-group" fxLayout="column" fxLayoutAlign="start start" [formControl]="formControls.covidTestStatus" required>
+                        <mat-radio-button class="tab-check-box" value="ut" fxFlex="13" fxFlex.xs="25"> {{ 'forms.option.under_test' | translate }} </mat-radio-button>
                         <mat-radio-button class="tab-check-box" value="p" fxFlex="13" fxFlex.xs="25"> {{ 'forms.option.pos_test' | translate }} </mat-radio-button>
                         <mat-radio-button class="tab-check-box" value="n" fxFlex="13" fxFlex.xs="25"> {{ 'forms.option.neg_test' | translate }} </mat-radio-button>
                         <mat-radio-button class="tab-check-box" value="na" fxFlex="13" fxFlex.xs="25"> {{ 'forms.option.no_test' | translate }} </mat-radio-button>
-                        <mat-radio-button class="tab-check-box" value="ut" fxFlex="13" fxFlex.xs="25"> {{ 'forms.option.under_test' | translate }} </mat-radio-button>
                     </mat-radio-group>
                 </div>
             </div>
@@ -230,6 +230,14 @@
                     </mat-form-field>
             </div>
             <!-- (dateInput)="handleTestDate($event)" -->
+            <div fxFlex="3" fxFlex.xs="5"></div>
+            <div class="form"  *ngIf="formControls.covidTestStatus.value==='ut'" fxLayout="row wrap" fxLayoutAlign="start center">
+                <h5 class="tab-sub-title" fxFlex="100">{{'forms.label.srf_id' | translate}}<span>*</span></h5>
+            	<mat-form-field fxFlex="30" fxFlex.xs>
+            	    <mat-label>{{'forms.label.enter_srf_id' | translate}}</mat-label>
+            	    <input type="text" [formControl]="formControls.srf_id" matInput>
+            	</mat-form-field>
+            </div>
             <div class="form" *ngIf="formControls.covidTestStatus.value==='n'" fxLayout="row wrap" fxLayoutAlign="start center">
                 <h5 class="tab-sub-title" fxFlex="100">{{'forms.label.prior_status' | translate}} <span>*</span></h5>
                 <div class="covid-test-status" fxLayoutAlign="start center" fxLayoutGap="10px" fxFlex="100">
